--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "jquery": "^3.6.0",
+        "scrollreveal": "^4.0.9",
         "vue": "^3.2.33",
         "vue-router": "^4.0.15"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.0",
+        "@types/jquery": "^3.5.14",
         "@types/node": "^16.11.27",
+        "@types/scrollreveal": "^0.0.8",
         "@vitejs/plugin-vue": "^2.3.1",
         "@vitejs/plugin-vue-jsx": "^1.3.10",
         "@vue/eslint-config-typescript": "^10.0.0",
