--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "compilerOptions": {
         "allowJs": true,
         "baseUrl": ".",
+        "noImplicitAny": false,
         "paths": {
             "@/*": ["./src/*"]
         }
