--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "compilerOptions": {
         "allowJs": true,
         "baseUrl": ".",
+        "lib": ["dom", "ES2020"],
         "noImplicitAny": false,
         "paths": {
             "@/*": ["./src/*"]
